--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -38,7 +38,7 @@ body {
     max-width: 620px;
     margin: 0 auto;
     position: absolute;
-    top: 30%;
+    top: 15%;
     left: 0;
     right: 0;
   }
@@ -63,8 +63,7 @@ body {
       justify-content: space-between;
 
       &-input {
-        width: 100%;
-        max-width: 280px;
+        width: 48%;
         background: #fff;
         position: relative;
         border-radius: 20px;
@@ -87,10 +86,61 @@ body {
           font-size: 14px;
           outline: none;
 
-          &--margin {
-            margin-left: 18px;
+          &--padding {
+            padding-left: 40px;
           }
         }
+      }
+    }
+
+    &-friends {
+      padding: 0px 0px 18px;
+      background: #fff;
+
+      &-your, &-in-list {
+        width: 49%;
+        padding: 0px 15px;
+        vertical-align: top;
+        display: inline-block;
+        min-height: 300px;
+
+        .item {
+          height: 60px;
+          padding: 5px;
+          border-bottom: 1px solid #f0f0f0;
+
+          &-logo {
+            display: inline-block;
+            border-radius: 50%;
+            width: 45px;
+            height: 45px;
+            background: #ccc;
+          }
+
+          &-title {
+            font-size: 14px;
+            display: inline-block;
+            vertical-align: top;
+            color: #4f4f4f;
+            font-weight: normal;
+            padding: 13px 10px;
+          }
+
+          &-close {
+            color: #c4c4c4;
+            margin-top: 15px;
+          }
+
+          &:hover {
+            background: #f0f0f0;
+            cursor: pointer;
+            transition: all 0.5s ease;
+          }
+        }
+      }
+
+      &-your {
+        border-right: 1px solid #f0f0f0;
       }
     }
 
@@ -98,7 +148,7 @@ body {
       background: #f0f0f0;
       padding: 14px;
       border-bottom-right-radius: 6px;
-      border-top-left-radius: 6px;
+      border-bottom-left-radius: 6px;
       @include clearfix-micro();
 
       button {
@@ -118,6 +168,14 @@ body {
       }
     }
   }
+}
+
+.title-friends {
+  color: #4f4f4f;
+  font-size: 15px;
+  font-weight: normal;
+  padding: 15px 0;
+  border-bottom: 1px solid #f0f0f0;
 }
 
 .close {
