--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -118,6 +118,7 @@ body {
             width: 45px;
             height: 45px;
             background: #ccc;
+						background-size: contain !important;
           }
 
           &-title {
